css/style.css
/* ... */
.slide__price sup {
  position: absolute;
  top: 11px;
  right: -18px;
  font-size: 1.25rem;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

.slide__btn {
  display: none;
  position: absolute;
  bottom: 4.375rem;
  right: 0;
  width: 23.5625rem;
  height: 13.25rem;
  padding-left: 2.1875rem;
  color: inherit;
  background-color: transparent;
  background-image: url(../assets/img/decor/btn_bg-min.svg),
    url(../assets/img/icons/cart_icon-min.svg);
  background-repeat: no-repeat, no-repeat;
  background-size: 100% 100%, 1.5rem 1.5rem;
  background-position: 0 0, 8.75rem center;
  border: none;
  transition: all 0.5s ease;
}

.slide:hover .slide__btn {
  display: block;
  cursor: pointer;
}

/* Categories section */
.categories {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}

.categories__list {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.category {
  position: relative;
  width: 26.75rem;
  height: 32.3125rem;
  background-image: url(../assets/img/decor/cat_bg.svg);
  background-repeat: no-repeat;
  background-size: 388px 462px;
}

.category__title {
  max-width: 11.5rem;
  padding-top: 2.3125rem;
  font-weight: 500;
  font-size: 1.75rem;
  text-transform: uppercase;
}

.category img {
  position: absolute;
  top: 7rem;
  left: 5rem;
}

.category__amount {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 9.1875rem;
  right: 0;
  width: 5.0625rem;
  height: 4.6875rem;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 2.5rem;
  letter-spacing: 0.04em;
  text-transform: uppercase;
  background-color: var(--pink);
  border-radius: 100%;
  rotate: -23deg;
}

.category__amount span {
  margin-top: 10px;
  font-family: var(--font-family);
  font-weight: 500;
  font-size: 0.94rem;
  text-transform: uppercase;
}

.category__btn {
  position: absolute;
  left: 8.9375rem;
  bottom: 0;
  width: 100px;
  height: 101px;
  background-color: transparent;
  border: 2px solid var(--lime);
  border-radius: 100%;
  cursor: pointer;
}

.category__btn svg path {
  stroke: var(--lime);
}

/* Marquee section */
.tickers {
  padding-top: var(--section-padding);
  padding-bottom: calc(2 * var(--section-padding));
}

.ticker__wrapper {
  position: relative;
  display: flex;
  width: 110%;
  overflow: hidden;
  user-select: none;
}

.ticker__wrapper_1 {
  background-color: var(--pale-violet);
  transform: rotate(5deg);
  transform-origin: left;
}

.ticker__wrapper_2 {
  background-color: var(--blue);
  transform: rotate(-2deg);
  transform-origin: center;
}

.ticker {
  flex-shrink: 0;
  display: flex;
  justify-content: space-around;
  min-width: 100%;
  padding-block: 1.25rem;
}

.ticker_1 {
  animation: scroll-to-left 70s linear infinite;
}

.ticker_2 {
  animation: scroll-to-right 70s linear infinite;
}

.ticker__text {
  margin-left: 4.125rem;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 2.5rem;
  letter-spacing: 0.04em;
  text-transform: uppercase;
}

.ticker__text::after {
  content: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.4936 0.633555L12.0053 9.8985L21.3531 10.7607L12.0881 12.2729L11.2254 21.6208L9.71367 12.3559L0.365883 11.4936L9.63088 9.98142L10.4936 0.633555Z' fill='white'/%3E%3C/svg%3E");
  margin-left: 4.125rem;
}

@keyframes scroll-to-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(calc(-100% - 1.25rem));
  }
}

@keyframes scroll-to-right {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(calc(0% - 1.25rem));
  }
}

/* Blog section */
.blog {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}

.section__heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 4.375rem;
}

.blog__title {
  margin-bottom: 0;
  margin-right: auto;
}

.articles__controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 2.1875rem;
  margin-right: 2.8125rem;
}

.articles__control {
  width: 0.4375rem;
  height: 0.4375rem;
  background-color: var(--white);
  border-radius: 50%;
}

.articles__control:not(:first-child) {
  opacity: 0.3;
}

.count {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 11.8125rem;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 2.5rem;
  letter-spacing: 0.04em;
  text-transform: uppercase;
}

.count__line {
  display: block;
  width: 3.9375rem;
  height: 0;
  margin-bottom: 0.4375rem;
  border: 0.125rem solid var(--pale-violet);
}

.articles {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.article {
  display: flex;
  align-items: center;
  column-gap: 3.375rem;
  position: relative;
  width: 36.25rem;
  height: 23.5rem;
  background-image: url(../assets/img/decor/article_bg.svg);
  background-repeat: no-repeat;
  background-size: 36.25rem 23.5rem;
}

.article__header {
  padding-left: 1.5625rem;
}

.article__title {
  font-weight: 500;
  font-size: 1.75rem;
  text-transform: uppercase;
}

.article__author {
  position: absolute;
  top: 2.1875rem;
  right: 55%;
  width: 5.625rem;
  font-weight: 500;
  font-size: 1.12rem;
  font-style: normal;
  text-align: right;
}

.article__date {
  position: absolute;
  bottom: 2.6875rem;
  width: 5.625rem;
}

.article__img {
  padding-right: 0.8125rem;
  border-radius: 1.75rem 1.75rem 1.75rem 1.75rem;
  object-fit: cover;
}
/* ... */

